Fix stray scrollbars and leftover spacing in instruct mode chat

--- a/css/main.css
+++ b/css/main.css
@@ -507,7 +507,7 @@ audio {
 .chat > .messages {
     display: flex;
     flex-direction: column;
-    min-height: calc(100vh - 225px);
+    min-height: calc(100dvh - 225px);
 }
 
 .chat > .messages > :first-child {
